--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,13 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
-      run: echo Hello, world!
+      uses: ./.github/actions/ui-version
+      id: ui
+      with:
+        who-to-greet: "Bob"
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
-        echo Add other actions to build,
+        echo Add other actions to build ${{ui.time}},
         echo test, and deploy your project.
