--- a/.github/actions/ui-version/package.json
+++ b/.github/actions/ui-version/package.json
@@ -10,6 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "@actions/core":"1.2.4",
-    "@actions/github": "2.2.0",
+    "@actions/github": "2.2.0"
   }
 }
