--- a/.github/actions/ui-version/action.yml
+++ b/.github/actions/ui-version/action.yml
@@ -1,13 +1,13 @@
 name: 'Hello World'
 description: 'Greet someone and record the time'
 inputs:
-  who-to-greet:  # id of input
+  path:  # id of input
     description: 'Who to greet'
     required: true
-    default: 'World'
+    default: '.'
 outputs:
   time: # id of output
-    description: 'The time we greeted you'
+    version: 'The version'
 runs:
   using: 'node12'
   main: 'index.js'
