--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,10 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
-      working-directory: ui 
       uses: ./.github/actions/ui-version
       id: ui
       with:
-        who-to-greet: "Bob"
+        path: "./ui"
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
