--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,5 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
-        echo Add other actions to build ${{steps.ui.time}},
+        echo Add other actions to build ${{steps.ui.version}},
         echo test, and deploy your project.
