--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,14 +8,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Node Version
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
       uses: ./.github/actions/ui-version
       id: ui
       with:
         path: "./ui"
 
     - name: Python Version
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
       uses: ./.github/actions/api-version
       id: api 
       with:
