--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,9 @@ jobs:
       with:
         path: "./api"
 
+    - name: Python AMI
+        uses: ./.github/actions/docker-action
+        id: python-ami
+        with:
+          name: "iai-api"
+          version: "${{ steps.api.outputs.version }}"
