test change directory

--- a/.github/actions/docker-action/main.yml
+++ b/.github/actions/docker-action/main.yml
@@ -14,5 +14,5 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.version }}
+    # - ${{ inputs.version }}
     - ${{ inputs.name }}
