--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,8 @@ jobs:
 
     - name: Configure AWS
       uses: aws-actions/configure-aws-credentials@v1
-      aws-region: ca-central-1
+      with:
+        aws-region: ca-central-1
 
     - name: Python AMI
       uses: ./.github/actions/docker-action
