--- a/.github/actions/setup-packer/package.json
+++ b/.github/actions/setup-packer/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "dependencies": {
     "@actions/core": "^1.2.4",
+    "@actions/exec": "^1.0.4",
     "@actions/github": "^2.2.0",
     "@actions/tool-cache": "^1.3.5"
   },
