--- a/.github/actions/api-version/package.json
+++ b/.github/actions/api-version/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "dependencies": {
     "@actions/core": "^1.2.4",
+    "@actions/exec": "^1.0.4",
     "@actions/github": "^2.2.0"
   },
   "devDependencies": {},
