--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.6.8'
+    
+    - name: Setup python packages
       run: |
         pip install pipenv
         pip install ansible
